# inox

./: .gitignore  CONTRIBUTING.md  README.md  demo.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: ci.yml  dummy.yml  test.yml  tests.yml
docs/: api.rst  conf.py  index.rst  tutorials.rst
docs/static/: custom.css
docs/tutorials/: mnist.ipynb
inox/: __init__.py  api.py  conftest.py  debug.py  numpy.py  patch.py  random.py  tree.py  tree_util.py
inox/nn/: __init__.py  activation.py  attention.py  base.py  container.py  dropout.py  einops.py  interpolation.py  layers.py  linear.py  module.py  normalization.py  padding.py  pooling.py  recurrent.py  share.py  special.py  spectral.py  ssm.py  state.py  stateful.py
tests/: test_api.py  test_debug.py  test_nn.py  test_random.py  test_tree.py  test_tree_util.py
