[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inox"
description = "Stainless neural networks in JAX"
authors = [
  {name = "François Rozet", email = "francois.rozet@outlook.com"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "einops>=0.5.0",
  "jax>=0.4.26",
]
dynamic = ["version"]
keywords = ["jax", "pytree", "neural networks", "deep learning"]
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
docs = [
  "docutils==0.19",
  "furo==2024.5.6",
  "myst-nb==1.0.0",
  "sphinx==7.3.7",
]
lint = [
  "pre-commit>=3.7.0",
  "ruff==0.9.9",
]
test = [
  "pytest>=8.0.0",
]

[project.urls]
documentation = "https://inox.readthedocs.io"
source = "https://github.com/francois-rozet/inox"
tracker = "https://github.com/francois-rozet/inox/issues"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99

[tool.ruff.lint]
extend-select = ["B", "I", "W"]
ignore = ["E731"]
preview = true

[tool.ruff.lint.isort]
lines-between-types = 1
relative-imports-order = "closest-to-furthest"
section-order = ["future", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
preview = true

[tool.setuptools.dynamic]
version = {attr = "inox.__version__"}

[tool.setuptools.packages.find]
include = ["inox*"]
