[metadata]
name = inox
version = attr: inox.__version__
description = Stainless neural networks in JAX
long_description = file: README.md
long_description_content_type = text/markdown
keywords = jax, neural, networks, deep learning
author = François Rozet
author_email = francois.rozet@outlook.com
url = https://github.com/francois-rozet/inox
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt
